setup project file

--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "newbackend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js "
   },
   "keywords": [
     "javascript"
   ],
   "author": "Debasish Das Biswas",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
